update JDK String Deduplication