@@ -222,3 +222,90 @@ public AbstractStringBuilder delete(int start, int end) {
     return this;
 }
 ```
+
+## Deduplication
+[JEP192](http://openjdk.java.net/jeps/192)
+
+call `G1StringDedup::enqueue_from_evacuation()` when `G1ParScanThreadState::copy_to_survivor_space()`
+call `G1StringDedup::enqueue_from_mark()` when `G1FullGCMarker::mark_object()`
+
+```cpp
+// g1StringDedup.cpp
+void G1StringDedup::enqueue_from_evacuation(bool from_young, bool to_young, uint worker_id, oop java_string) {
+  assert(is_enabled(), "String deduplication not enabled");
+  if (is_candidate_from_evacuation(from_young, to_young, java_string)) {
+    G1StringDedupQueue::push(worker_id, java_string);
+  }
+}
+
+bool G1StringDedup::is_candidate_from_evacuation(bool from_young, bool to_young, oop obj) {
+  if (from_young && java_lang_String::is_instance_inlined(obj)) {
+    if (to_young && obj->age() == StringDeduplicationAgeThreshold) {
+      // Candidate found. String is being evacuated from young to young and just
+      // reached the deduplication age threshold.
+      return true;
+    }
+    if (!to_young && obj->age() < StringDeduplicationAgeThreshold) {
+      // Candidate found. String is being evacuated from young to old but has not
+      // reached the deduplication age threshold, i.e. has not previously been a
+      // candidate during its life in the young generation.
+      return true;
+    }
+  }
+
+  // Not a candidate
+  return false;
+}
+
+
+void G1StringDedup::enqueue_from_mark(oop java_string, uint worker_id) {
+  assert(is_enabled(), "String deduplication not enabled");
+  if (is_candidate_from_mark(java_string)) {
+    G1StringDedupQueue::push(worker_id, java_string);
+  }
+}
+
+bool G1StringDedup::is_candidate_from_mark(oop obj) {
+  if (java_lang_String::is_instance_inlined(obj)) {
+    bool from_young = G1CollectedHeap::heap()->heap_region_containing(obj)->is_young();
+    if (from_young && obj->age() < StringDeduplicationAgeThreshold) {
+      // Candidate found. String is being evacuated from young to old but has not
+      // reached the deduplication age threshold, i.e. has not previously been a
+      // candidate during its life in the young generation.
+      return true;
+    }
+  }
+
+  // Not a candidate
+  return false;
+}
+```
+
+```java
+ /**
+ * -Xmx256M -XX:+UseG1GC -XX:+PrintGCDetails -XX:+PrintGCTimeStamps
+ * 
+ * -XX:+UseStringDeduplication -XX:+PrintStringDeduplicationStatistics
+ */
+public class Main {
+ 
+  private static final LinkedList<String> strings = new LinkedList<>();
+
+  public static void main(String[] args) throws InterruptedException {
+    int iteration = 0;
+    while (true) {
+      for (int i = 0; i < 100; i++) {
+        for (int j = 0; j < 10; j++) {
+          strings.add(new String("String " + j));
+        }
+      }
+      iteration++;
+      System.out.println("Survived Iteration: " + iteration);
+      TimeUnit.MILLISECONDS.sleep(100);
+    }
+  }
+}
+```
+
+String#intern() cache instance of String
+Deduplication remove cache of char/byte array in String instance
